Updated BodyMantra font

--- a/BodyMantra/wp-content/themes/bodymantra/css/global.css
+++ b/BodyMantra/wp-content/themes/bodymantra/css/global.css
@@ -12,5 +12,5 @@
 
 @font-face {
     font-family: "Lovers-Quarrel";
-    src: url("../fonts/LoversQuarrel-Regular.otf");
+    src: url("fonts/LoversQuarrel-Regular.otf");
 }
