--- a/BodyMantra/wp-content/themes/bodymantra/style.css
+++ b/BodyMantra/wp-content/themes/bodymantra/style.css
@@ -152,6 +152,11 @@ a:hover {
 	text-decoration: underline;
 }
 
+@font-face {
+    font-family: "Lovers-Quarrel";
+    src: url("fonts/LoversQuarrel-Regular.otf");
+}
+
 h1,
 h2,
 h3,
