--- a/CSS/less/Index.less
+++ b/CSS/less/Index.less
@@ -1,44 +1,47 @@
-@font-face {
-  font-family: "MuddyTractor";
-  src: url("fonts/MuddyTractorDEMO-KCFonts.ttf");
-}
-@font-face {
-  font-family: "GreatVibes";
-  src: url("fonts/GreatVibes-Regular.otf");
-}
+@import "_Globals";
 /* GLOBAL STYLES
 -------------------------------------------------- */
 /* Padding below the footer and lighter body text */
+
 body {
   padding-bottom: 40px;
   color: #989898;
 }
-.btn {
+
+.btn{
   font-size: 18px;
 }
+
 /* NAVBAR
 -------------------------------------------------- */
+
 /* Special class on .container surrounding .navbar, used for positioning it into place. */
 .navbar-wrapper {
   position: relative;
   z-index: 15;
 }
+
 /* CAROUSEL
 -------------------------------------------------- */
+
 /* Carousel base class */
 .carousel {
   margin-bottom: 60px;
+
   /* Negative margin to pull up carousel. 90px is roughly margins and height of navbar. */
   margin-top: -90px;
+
   /* Declare heights because of positioning of img element */
-}
-.carousel .item {
-  height: 500px;
+   .item {
+    height: 500px;
+  }
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
   z-index: 10;
 }
+
+
 .carousel-inner > .item > img {
   position: absolute;
   top: 0;
@@ -46,39 +49,42 @@ body {
   min-width: 100%;
   height: 500px;
 }
+
 /* MARKETING CONTENT
 -------------------------------------------------- */
+
 /* Pad the edges of the mobile views a bit */
 .marketing {
   padding-left: 15px;
   padding-right: 15px;
-  /* Center align the text within the three columns below the carousel */
-}
-.marketing .col-lg-4 {
+
+/* Center align the text within the three columns below the carousel */
+ .col-lg-4 {
   text-align: center;
   margin-bottom: 20px;
-}
-.marketing .col-lg-4 p {
-  margin-left: 10px;
-  margin-right: 10px;
-}
-.marketing h2 {
-  font-weight: normal;
-}
-.marketing img {
-  background-color: #fff;
+   p {
+     margin-left: 10px;
+     margin-right: 10px;
+   }
+  }
+  h2 {
+    font-weight: normal;
+  }
+  img{
+    background-color: #fff;
+  }
 }
 /* Featurettes
 ------------------------- */
+
 .featurette-divider {
   margin: 80px 0 0 0;
 }
 .featurette {
-  padding-top: 210px;
-  /* Vertically center images part 1: add padding above and below text. */
-  overflow: hidden;
-  /* Vertically center images part 2: clear their floats. */
+  padding-top: 210px; /* Vertically center images part 1: add padding above and below text. */
+  overflow: hidden; /* Vertically center images part 2: clear their floats. */
 }
+
 /* Give some space on the sides of the floated elements so text doesn't run right into it. */
 .featurette-image.pull-left {
   margin-right: 40px;
@@ -86,61 +92,69 @@ body {
 .featurette-image.pull-right {
   margin-left: 40px;
 }
+
 /* Thin out the marketing headings */
 .featurette-heading {
   font-size: 40px;
   font-weight: 300;
   line-height: 1;
   letter-spacing: -1px;
+  &.nacho{
+    font-family: MuddyTractor;
+    a{
+    color: @nacho;
+    &:hover{
+      text-decoration: none;
+      text-shadow: .1em .1em @nachoDark;
+    }
+    }
+  }
+  &.mantra{
+    font-family: GreatVibes;
+    a{
+    color: @mantra;
+    &:hover{
+      text-decoration: none;
+      text-shadow: 0 0 0.2em @white;
+    }
+    }
+  }
 }
-.featurette-heading.nacho {
-  font-family: MuddyTractor;
-}
-.featurette-heading.nacho a {
-  color: #ff9329;
-}
-.featurette-heading.nacho a:hover {
-  text-decoration: none;
-  text-shadow: 0.1em 0.1em #99633f;
-}
-.featurette-heading.mantra {
-  font-family: GreatVibes;
-}
-.featurette-heading.mantra a {
-  color: #c070a6;
-}
-.featurette-heading.mantra a:hover {
-  text-decoration: none;
-  text-shadow: 0 0 0.2em #ffffff;
-}
-.featurette-image.img-circle.pull-right .featurette-heading {
+.featurette-image.img-circle.pull-right .featurette-heading{
   margin-left: 520px;
 }
-.text-muted {
+
+.text-muted{
   font-size: 40px;
 }
+
 /* RESPONSIVE CSS
 -------------------------------------------------- */
+
 @media (min-width: 768px) {
-  .btn {
+  .btn{
     font-size: 14px;
   }
+
   /* Remve the edge padding needed for mobile */
   .marketing {
     padding-left: 0;
     padding-right: 0;
     padding-top: 150px;
   }
+
   /* Navbar positioning*/
   .navbar-wrapper {
     margin-top: 20px;
     position: fixed;
     width: 100%;
   }
+
   /* The navbar becomes detached from the top, so we round the corners */
   .navbar-wrapper .navbar {
     border-radius: 4px;
   }
+
   /* Bump up size of carousel content */
   .carousel-caption p {
     margin-bottom: 20px;
@@ -150,4 +164,5 @@ body {
   .featurette-heading {
     font-size: 50px;
   }
+
 }
