--- a/dev/css/global.css
+++ b/dev/css/global.css
@@ -1,204 +1,1 @@
-body {
-  background-color: #13728e;
-}
-nav {
-  background-color: #333;
-  opacity: .5;
-  color: white;
-}
-h1 {
-  margin: 0 auto 30px;
-}
-.show-case {
-  margin: auto;
-  height: 123px;
-  width: 118px;
-}
-.show-case a {
-  box-shadow: 0 0 0 4px #ffffff;
-  border: solid 10px transparent;
-  background-color: white;
-  border-radius: 75px;
-  margin: auto;
-  font-family: 'FontAwesome';
-  font-size: 90px;
-  padding: 15px 20px;
-  transition: background 0.2s, color 0.2s;
-}
-.show-case a.fa-gear {
-  color: #999999;
-}
-.show-case a.fa-gear:hover:before {
-  -webkit-animation: spinAround 2s linear infinite;
-  -moz-animation: spinAround 2s linear infinite;
-  animation: spinAround 2s linear infinite;
-}
-.show-case a.fa-heart {
-  color: #ff1111;
-}
-.show-case a.fa-heart:hover:before {
-  -webkit-animation: thumpThump 2s linear infinite;
-  -moz-animation: thumpThump 2s linear infinite;
-  animation: thumpThump 2s linear infinite;
-}
-.show-case a.fa-pencil {
-  color: #ffaa11;
-}
-.show-case a.fa-pencil:hover:before {
-  -webkit-animation: pencil 2s linear infinite;
-  -moz-animation: pencil 2s linear infinite;
-  animation: pencil 2s linear infinite;
-}
-.show-case a:hover {
-  text-decoration: none;
-  background-color: #13728e;
-  border: white solid 10px;
-}
-.show-case + h2 {
-  text-align: center;
-  border: 10px transparent solid;
-  margin-left: 30px;
-}
-.content {
-  position: relative;
-  top: 200px;
-}
-/*Keyframes*/
-/*SpinAround*/
-@-webkit-keyframes spinAround {
-  from {
-    -webkit-transform: rotate(0deg);
-  }
-  to {
-    -webkit-transform: rotate(360deg);
-  }
-}
-@-moz-keyframes spinAround {
-  from {
-    -moz-transform: rotate(0deg);
-  }
-  to {
-    -moz-transform: rotate(360deg);
-  }
-}
-@keyframes spinAround {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-/*ThumpThump*/
-@-webkit-keyframes thumpThump {
-  from {
-    transform: none;
-  }
-  20% {
-    transform: scale(1.25);
-  }
-  40% {
-    transform: none;
-  }
-  60% {
-    transform: scale(1.18);
-  }
-  80% {
-    transform: none;
-  }
-  to {
-    transform: none;
-  }
-}
-@-moz-keyframes thumpThump {
-  from {
-    transform: none;
-  }
-  20% {
-    transform: scale(1.25);
-  }
-  40% {
-    transform: none;
-  }
-  60% {
-    transform: scale(1.18);
-  }
-  80% {
-    transform: none;
-  }
-  to {
-    transform: none;
-  }
-}
-@keyframes thumpThump {
-  from {
-    transform: none;
-  }
-  20% {
-    transform: scale(1.25);
-  }
-  40% {
-    transform: none;
-  }
-  60% {
-    transform: scale(1.18);
-  }
-  80% {
-    transform: none;
-  }
-  to {
-    transform: none;
-  }
-}
-/*Pencil*/
-@-webkit-keyframes pencil {
-  from {
-    transform: none;
-  }
-  25% {
-    transform: translate(10px, 5px);
-  }
-  50% {
-    transform: translate(20px, 0);
-  }
-  75% {
-    transform: translate(30px, 5px);
-  }
-  to {
-    transform: none;
-  }
-}
-@-moz-keyframes pencil {
-  from {
-    transform: none;
-  }
-  25% {
-    transform: translate(10px, 5px);
-  }
-  50% {
-    transform: translate(20px, 0);
-  }
-  75% {
-    transform: translate(30px, 5px);
-  }
-  to {
-    transform: none;
-  }
-}
-@keyframes pencil {
-  from {
-    transform: none;
-  }
-  25% {
-    transform: translate(10px, 5px);
-  }
-  50% {
-    transform: translate(20px, 0);
-  }
-  75% {
-    transform: translate(30px, 5px);
-  }
-  to {
-    transform: none;
-  }
-}
+body{background-color:#13728e;font-family:'Open Sans',sans-serif;color:#fff}nav{background-color:#333;opacity:.8;color:#fff;font-family:Quicksand,Arial,sans-serif;font-size:20px}nav li a{color:#fff}nav .icon-bar{background-color:#fff}h1{margin:0 auto 30px}h1 .brand{font-size:12px}h1,h2,h3,h4,h5,h6{font-family:Pacifico,'Times New Roman',serif;color:#fff}h1 code,h2 code,h3 code,h4 code,h5 code,h6 code{background-color:inherit;border-radius:0;color:inherit;padding:auto;font-family:Quicksand,Arial,sans-serif}.show-case{margin:auto;height:123px;width:118px}.show-case a{box-shadow:0 0 0 4px #fff;border:solid 10px transparent;background-color:#fff;border-radius:75px;margin:auto;font-family:FontAwesome;font-size:90px;padding:15px 20px;transition:background .2s,color .2s}.show-case a.fa-gear{color:#999}.show-case a.fa-gear:hover:before{-webkit-animation:spinAround 2s linear infinite;-moz-animation:spinAround 2s linear infinite;animation:spinAround 2s linear infinite}.show-case a.fa-heart{color:#f11}.show-case a.fa-heart:hover:before{-webkit-animation:thumpThump 2s linear infinite;-moz-animation:thumpThump 2s linear infinite;animation:thumpThump 2s linear infinite}.show-case a.fa-pencil{color:#fa1}.show-case a.fa-pencil:hover:before{-webkit-animation:pencil 2s linear infinite;-moz-animation:pencil 2s linear infinite;animation:pencil 2s linear infinite}.show-case a:hover{text-decoration:none}.show-case+h2{text-align:center;border:10px transparent solid;margin-left:30px}.content{position:relative;top:200px}footer{position:fixed;bottom:1px;width:100%}@-webkit-keyframes spinAround{from{-webkit-transform:rotate(0deg)}to{-webkit-transform:rotate(360deg)}}@-moz-keyframes spinAround{from{-webkit-transform:rotate(0deg)}to{-webkit-transform:rotate(360deg)}}@keyframes spinAround{from{-webkit-transform:rotate(0deg)}to{-webkit-transform:rotate(360deg)}}@-webkit-keyframes thumpThump{from{transform:none}20%{transform:scale(1.25)}40%{transform:none}60%{transform:scale(1.18)}80%{transform:none}to{transform:none}}@-moz-keyframes thumpThump{from{transform:none}20%{transform:scale(1.25)}40%{transform:none}60%{transform:scale(1.18)}80%{transform:none}to{transform:none}}@keyframes thumpThump{from{transform:none}20%{transform:scale(1.25)}40%{transform:none}60%{transform:scale(1.18)}80%{transform:none}to{transform:none}}@-webkit-keyframes pencil{from{transform:none}25%{transform:translate(10px,5px)}50%{transform:translate(20px,0)}75%{transform:translate(30px,5px)}to{transform:none}}@-moz-keyframes pencil{from{transform:none}25%{transform:translate(10px,5px)}50%{transform:translate(20px,0)}75%{transform:translate(30px,5px)}to{transform:none}}@keyframes pencil{from{transform:none}25%{transform:translate(10px,5px)}50%{transform:translate(20px,0)}75%{transform:translate(30px,5px)}to{transform:none}}
