--- a/dev/partials/artistic.html
+++ b/dev/partials/artistic.html
@@ -1,10 +1,36 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<h1>Artistic Design</h1>
 
-</body>
-</html>
+<div class="margin-bottom">
+    <div class="show-case">
+        <a href="./#/artistic" class="fa-pencil"></a>
+    </div>
+</div>
+
+<p>
+    Aesthetics encourage people stay on a site, explore a site, and show a site to other people.
+    Changing the font on a site can change the entire atmosphere you experience when you look at it.
+    Design lets a user know what is clickable, what is complete, and what they need to do next.
+    Design can make a website covered in clutter or sleek and refined. Staying up to date with the
+    latest trends and practices of design as well as constantly consulting with outside resources
+    to determine where a design stands.
+    Just Better Code pays attention to the small details so that you will never have to notaice them.
+</p>
+
+
+
+
+<div class="row">
+    <div class="col-sm-4">
+        <div class="show-case small">
+            <a href="./#/technical" class="fa-gear"></a>
+        </div>
+        <h2>technical</h2>
+    </div>
+    <div class="col-sm-offset-4 col-sm-4">
+        <div class="show-case small">
+            <a href="./#/emotional" class="fa-heart"></a>
+        </div>
+        <h2>emotional</h2>
+    </div>
+</div>
+
