--- a/dev/partials/home.html
+++ b/dev/partials/home.html
@@ -1,23 +1,20 @@
-
-
 <h1>What is Just Better <code>Code</code>?</h1>
 <div class="row">
     <div class="col-sm-4">
         <div class="show-case">
-            <a class="fa-gear"></a>
+            <a href="./#/technical" class="fa-gear"></a>
         </div>
         <h2>technical</h2>
-
     </div>
     <div class="col-sm-4">
         <div class="show-case">
-            <a class="fa-heart"></a>
+            <a href="./#/emotional" class="fa-heart"></a>
         </div>
         <h2>emotional</h2>
     </div>
     <div class="col-sm-4">
         <div class="show-case">
-            <a class="fa-pencil"></a>
+            <a href="./#/artistic" class="fa-pencil"></a>
         </div>
         <h2>artistic</h2>
     </div>
