--- a/dev/partials/technical.html
+++ b/dev/partials/technical.html
@@ -1,10 +1,37 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
-</head>
-<body>
+<h1>Technical Development</h1>
 
-</body>
-</html>
+<div class="margin-bottom">
+    <div class="show-case">
+        <a href="./#/technical" class="fa-gear"></a>
+    </div>
+</div>
+
+<p>
+    The foundation of a great a web application is the technology behind it.
+Keeping up to date with the latest programming languages, frameworks, design patterns,
+testing methods, and other trends are all a part of that foundation.
+    Up-to-date coding strategies not only allow the a site to incorporate great features,
+    they allow search engine optimization, responsiveness, and adaptability.
+</p>
+<p>
+    Another important factor is a diverse toolkit.
+    Every project is different and it is a developer's responsibility to ensure
+    that the tool fits the job, not that the job fits the tool. Just Better Code
+    determines the tools based on what best fits the project requirements, even
+    if that means that a new tool needs to be learned.
+</p>
+
+<div class="row">
+    <div class="col-sm-4">
+        <div class="show-case small">
+            <a href="./#/emotional" class="fa-heart"></a>
+        </div>
+        <h2>emotional</h2>
+    </div>
+    <div class="col-sm-offset-4 col-sm-4">
+        <div class="show-case small">
+            <a href="./#/artistic" class="fa-pencil"></a>
+        </div>
+        <h2>artistic</h2>
+    </div>
+</div>
