--- a/dev/partials/partners.html
+++ b/dev/partials/partners.html
@@ -1,1 +1,23 @@
 <h1>Partners</h1>
+<p>
+    Just as the Internet is not just for browsing, Just Better Code also collaborates with partners who
+    aspire to bring people a better user experience on and off line.
+</p>
+
+
+<a href="http://thejtagroup.com" target="_blank">
+    <div class="cfw">
+        <div class="info">
+            <img src="./img/cfw-logo.png">
+        </div>
+    </div>
+</a>
+
+<a href="http://choki.org" target="_blank">
+    <div class="nacho">
+        <div class="info">
+            <h1>CHOKI</h1>
+            <p>Bringing the art of Bhutan to Colorado to save a culture of artisans.</p>
+        </div>
+    </div>
+</a>
