--- a/dev/partials/projects.html
+++ b/dev/partials/projects.html
@@ -1,20 +1,27 @@
 <h1>Projects</h1>
 
-<div>
-    <a href="http://justbettercode.com/Projects/CFW">
-        <img src="">
-    </a>
-</div>
 
-<div>
-    <a href="http://justbettercode.com/Dallas">
-        <img src="img/cfw.png">
-    </a>
-</div>
+<a href="http://justbettercode.com/Projects/CFW" target="_blank">
+    <div class="cfw">
+        <div class="info">
+            <img src="./img/cfw-logo.png">
+        </div>
+    </div>
+</a>
+
+<a href="http://justbettercode.com/Dallas" target="_blank">
+    <div class="nacho">
+        <div class="info">
+            <h1>Nacho Business</h1>
+        </div>
+    </div>
+</a>
 
 
-<div>
-    <a href="http://justbettercode.com/BodyMantra">
-        <img src="">
-    </a>
-</div>
+<a href="http://justbettercode.com/BodyMantra" target="_blank">
+    <div class="body-mantra">
+        <div class="info">
+            <h1>Body Mantra</h1>
+        </div>
+    </div>
+</a>
