--- a/dev/css/less/global.less
+++ b/dev/css/less/global.less
@@ -10,6 +10,15 @@
 @projects: #f93;
 @contact: #3a3;
 //Fonts
+@font-face {
+  font-family: "MuddyTractor";
+  src: url("../fonts/MuddyTractorDEMO-KCFonts.ttf");
+}
+@font-face {
+  font-family: "GreatVibes";
+  src: url("../fonts/GreatVibes-Regular.otf");
+}
+
 @headerFont: 'Pacifico', 'Times New Roman', serif;
 @subheaderFont: 'Quicksand', Arial, sans-serif;
 @bodyFont: 'Open Sans', sans-serif;
@@ -145,8 +154,77 @@ h1, h2, h3, h4, h5, h6{
     }
   }
 
-  &.projects{
+  &.projects {
     background-color: @projects;
+    a {
+      text-decoration: none;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      .info {
+        opacity: 0;
+        img {
+          margin: 50px 0;
+          height: 100px;
+        }
+      }
+      &:hover {
+        .cfw {
+          .info {
+            opacity: 1;
+            animation: flipInTop 1s;
+            -webkit-animation: flipInTop 1s;
+            -moz-animation: flipInTop 1s;
+          }
+        }
+        .nacho {
+          .info {
+            opacity: 1;
+            animation: rubberBand 1s;
+            -webkit-animation: rubberBand 1s;
+            -moz-animation: rubberBand 1s;
+            h1 {
+              font-family: 'MuddyTractor', Verdana, sans-serif;
+              font-size: 75px;
+              color: @projects;
+              padding-top: 50px;
+              text-shadow: 0 0 2px #aacc36;
+            }
+          }
+        }
+        .body-mantra {
+          .info {
+            opacity: 1;
+            animation: flipInTop 1s;
+            -webkit-animation: flipInTop 1s;
+            -moz-animation: flipInTop 1s;
+            h1 {
+              font-family: 'GreatVibes', 'Times New Roman', serif;
+              font-size: 50px;
+              text-decoration: none;
+              padding-top: 50px;
+              color: #C070A6;
+              text-shadow: 0 0 2px #fff;
+            }
+          }
+        }
+      }
+    }
+
+    div {
+      height: 200px;
+      width: 100%;
+      &.cfw {
+        background: url('../img/cfw.png') center no-repeat;
+      }
+      &.nacho {
+        background: url('../img/nacho.jpg') center no-repeat;
+      }
+      &.body-mantra {
+        background: url('../img/body-mantra.jpg') center no-repeat;
+        background-size: 100% 100%;
+      }
+    }
   }
 
   &.partners{
