Home pages highlited and emotional animation updated

--- a/dev/partials/artistic.html
+++ b/dev/partials/artistic.html
@@ -7,15 +7,16 @@
 </div>
 
 <p>
-    Aesthetics encourage people stay on a site, explore a site, and show a site to other people.
-    Changing the font on a site can change the entire atmosphere you experience when you look at it.
+    <b>Aesthetics</b> encourage people <b>stay</b> on a site, <b>explore</b> a site, and <b>show</b> a site to other people.
+    Changing the font on a site can change the entire <b>atmosphere</b> you experience when you look at it.
     Design lets a user know what is clickable, what is complete, and what they need to do next.
     Design can make a website covered in clutter or sleek and refined. Staying up to date with the
-    latest trends and practices of design as well as constantly consulting with outside resources
+    latest <b>trends</b> and practices of design as well as constantly consulting with outside resources
     to determine where a design stands.
-    Just Better Code pays attention to the small details so that you will never have to notaice them.
 </p>
-
+<p>
+    Just Better Code pays attention to the small <b>details</b> so that you will never have to notice them.
+</p>
 
 
 
