--- a/dev/partials/emotional.html
+++ b/dev/partials/emotional.html
@@ -8,14 +8,14 @@
 </div>
 
 
-<p>Just Better Code develops while constantly considering the experience of the person who will be using the site.
-    A website should not just be a path from person to information, the path should be <i>effortless</i> and <i>enjoyable</i>.
+<p>Just Better Code develops while <b>constantly</b> considering the experience of the person who will be using the site.
+    A website should not just be a path from person to information, the path should be <b><i>effortless</i></b> and <b><i>enjoyable</i></b>.
 </p>
-<p>A website can be positively emotionally impactful in two ways:</p>
+<p>A website can be <b>positively</b> emotionally impactful in two ways:</p>
 <ul>
-    <li>It is so easy to navigate that you do not have time to generate a negative
+    <li>It is so <b>easy to navigate</b> that you do not have time to generate a negative
         opinion about the site.</li>
-    <li>It connects with you in an unexpected way.</li>
+    <li>It <b>connects</b> with you in an <b>unexpected</b> way.</li>
 </ul>
 
 
