--- a/dev/partials/technical.html
+++ b/dev/partials/technical.html
@@ -8,15 +8,15 @@
 
 <p>
     The foundation of a great a web application is the technology behind it.
-Keeping up to date with the latest programming languages, frameworks, design patterns,
-testing methods, and other trends are all a part of that foundation.
+Keeping <b>up-to-date</b> with the latest programming languages, frameworks, design patterns,
+testing methods, and other trends are all a part of that <b>foundation</b>.
     Up-to-date coding strategies not only allow the a site to incorporate great features,
-    they allow search engine optimization, responsiveness, and adaptability.
+    they allow <b>search engine optimization, responsiveness,</b> and <b>adaptability</b>.
 </p>
 <p>
-    Another important factor is a diverse toolkit.
+    Another important factor is a <b>diverse toolkit</b>.
     Every project is different and it is a developer's responsibility to ensure
-    that the tool fits the job, not that the job fits the tool. Just Better Code
+    that the <b>tool fits the job</b>, not that the job fits the tool. Just Better Code
     determines the tools based on what best fits the project requirements, even
     if that means that a new tool needs to be learned.
 </p>
