--- a/dev/css/less/global.less
+++ b/dev/css/less/global.less
@@ -26,7 +26,13 @@
 body{
   background-color: @black;
   font-family: @bodyFont;
+  font-size: 20px;
   color: @white;
+}
+
+b{
+  font-weight: 900 !important;
+  font-size: 24px;
 }
 
 nav{
