--- a/dev/css/less/vars.less
+++ b/dev/css/less/vars.less
@@ -9,15 +9,7 @@
 @partners: #f26;
 @projects: #f93;
 @contact: #3a3;
-//Fonts
-@font-face {
-  font-family: "MuddyTractor";
-  src: url("../../../CSS/fonts/MuddyTractorDEMO-KCFonts.ttf");
-}
-@font-face {
-  font-family: "GreatVibes";
-  src: url("../../../CSS/fonts/GreatVibes-Regular.otf");
-}
+@guac: #aacc36;
 
 @headerFont: 'Pacifico', 'Times New Roman', serif;
 @subheaderFont: 'Quicksand', Arial, sans-serif;
