--- a/partials/emotional.html
+++ b/partials/emotional.html
@@ -3,7 +3,7 @@
 
 <div class="margin-bottom">
     <div class="show-case">
-        <a href="./#/emotional" class="fa-heart"></a>
+        <a href="#/emotional" class="fa-heart"></a>
     </div>
 </div>
 
@@ -22,13 +22,13 @@
 <div class="row">
     <div class="col-sm-4">
         <div class="show-case small">
-            <a href="./#/technical" class="fa-gear"></a>
+            <a href="#/technical" class="fa-gear"></a>
         </div>
         <h2>technical</h2>
     </div>
     <div class="col-sm-offset-4 col-sm-4">
         <div class="show-case small">
-            <a href="./#/artistic" class="fa-pencil"></a>
+            <a href="#/artistic" class="fa-pencil"></a>
         </div>
         <h2>artistic</h2>
     </div>
