--- a/partials/home.html
+++ b/partials/home.html
@@ -2,19 +2,19 @@
 <div class="row">
     <div class="col-sm-4">
         <div class="show-case">
-            <a href="./#/technical" class="fa-gear"></a>
+            <a href="#/technical" class="fa-gear"></a>
         </div>
         <h2>technical</h2>
     </div>
     <div class="col-sm-4">
         <div class="show-case">
-            <a href="./#/emotional" class="fa-heart"></a>
+            <a href="#/emotional" class="fa-heart"></a>
         </div>
         <h2>emotional</h2>
     </div>
     <div class="col-sm-4">
         <div class="show-case">
-            <a href="./#/artistic" class="fa-pencil"></a>
+            <a href="#/artistic" class="fa-pencil"></a>
         </div>
         <h2>artistic</h2>
     </div>
