--- a/partials/projects.html
+++ b/partials/projects.html
@@ -9,6 +9,14 @@
     </div>
 </a>
 
+<a href="http://justbettercode.com/Projects/MWord/snazzy" target="_blank">
+    <div class="mword">
+        <div class="info">
+            <h1>Exhibit M</h1>
+        </div>
+    </div>
+</a>
+
 <a href="http://justbettercode.com/Dallas" target="_blank">
     <div class="nacho">
         <div class="info">
