--- a/css/less/global.less
+++ b/css/less/global.less
@@ -627,6 +627,21 @@ h1, h2, h3, h4, h5, h6{
             -moz-animation: flipInTop 1s;
           }
         }
+        .mword{
+          .info{
+            opacity: 1;
+            animation: scaleUpCenter 1s;
+            -webkit-animation: scaleUpCenter 1s;
+            -moz-animation: scaleUpCenter 1s;
+            h1{
+              padding-top: 70px;
+              font-family: sans-serif;
+              font-weight: 100;
+              text-transform: uppercase;
+              letter-spacing: 10px;
+            }
+          }
+        }
         .nacho {
           .info {
             opacity: 1;
@@ -666,6 +681,9 @@ h1, h2, h3, h4, h5, h6{
       width: 100%;
       &.cfw {
         background: url('../img/cfw.png') center no-repeat;
+      }
+      &.mword{
+        background: url('../img/exhibit-m.jpg') center no-repeat;
       }
       &.nacho {
         background: url('../img/nacho.jpg') center no-repeat;
