Default black project background color

--- a/css/less/global.less
+++ b/css/less/global.less
@@ -680,16 +680,16 @@ h1, h2, h3, h4, h5, h6{
       height: 200px;
       width: 100%;
       &.cfw {
-        background: url('../img/cfw.png') center no-repeat;
+        background: url('../img/cfw.png') center no-repeat @black;
       }
       &.mword{
-        background: url('../img/exhibit-m.jpg') center no-repeat;
+        background: url('../img/exhibit-m.jpg') center no-repeat @black;
       }
       &.nacho {
-        background: url('../img/nacho.jpg') center no-repeat;
+        background: url('../img/nacho.jpg') center no-repeat @black;
       }
       &.body-mantra {
-        background: url('../img/body-mantra.jpg') center no-repeat;
+        background: url('../img/body-mantra.jpg') center no-repeat @black;
         background-size: 100% 100%;
       }
     }
