Fixed artistic transition

--- a/css/less/global.less
+++ b/css/less/global.less
@@ -25,7 +25,7 @@
   .pt-page-rotateCubeLeftIn
 }
 .artistic.ng-leave{
-  .pt-page-rotateCarouselTopOut
+  .pt-page-rotateSlideOut
 }
 
 .emotional.ng-enter{
