--- a/css/less/global.less
+++ b/css/less/global.less
@@ -680,7 +680,7 @@ h1, h2, h3, h4, h5, h6{
       height: 200px;
       width: 100%;
       &.cfw {
-        background: url('../img/cfw.png') center no-repeat @black;
+        background: url('../img/cfw.jpg') center no-repeat @black;
       }
       &.mword{
         background: url('../img/exhibit-m.jpg') center no-repeat @black;
