--- a/partials/projects.html
+++ b/partials/projects.html
@@ -13,7 +13,7 @@
         </div>
     </div>
 </a>
-<a href="http://justbettercode.com/Dallas" target="_blank">
+<a href="http://justbettercode.com/Projects/Dallas" target="_blank">
     <div class="nacho">
         <div class="info">
             <h1>Nacho Business</h1>
